# stapler

./: .gitignore  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  TODO  legacy-pypdf-setup.py  pyproject.toml  requirements.txt  setup.py  stapler  stapler.py  tox.ini
.github/workflows/: test-deploy.yml
staplelib/: __init__.py  commands.py  inputhelper.py  iohelper.py  stapler.py  staples.py  tests.py
