[tool.poetry]
name = "stapler3"
version = "1.0.1"
description = "Manipulate PDF documents from the command line"
authors = ["Philip Stark", "Fred Wenzel"]
license = "BSD-3-Clause"
readme = 'README.rst'
packages = [
    { include = "staplelib" },
]

[tool.poetry.dependencies]
python = "^3.7"
PyPDF2 = ">=1.26"
more-itertools = ">=2.2,<6.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stapler = 'staplelib:main'
pdf-stapler = 'staplelib:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
